Rough cut of AST and simple schema derivation

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-*.class
+*.so
+*.hprof
+*.project
+*.classpath
+**idea**
+*.iml
 *.log
+*.*.swp
+*target*
+*repository*
+*.settings
+*.cache
+*.DS_Store
+.bloop
+.metals
+*.code-workspace
+spark-warehouse
